# ai_agent

./: .env.example  .gitignore  Agent中级开发工程师学习计划（终极攻略版）.md  Agent岗位招聘需求调研与技能对标分析.md  README.md  requirements.txt  每日学习打卡表.md
.cursor/rules/: how-to-learn.mdc  multi-language-analogies.mdc
coding/: README.md
coding/projects/01-model-gateway/: README.md  pyproject.toml
coding/projects/01-model-gateway/config/: pricing.yaml
coding/projects/01-model-gateway/experiments/: structured_vs_json.py
coding/projects/01-model-gateway/reports/: week01-bench.json
coding/projects/01-model-gateway/scripts/: d11_chat_with_tools_debug.py  d12_dual_provider_debug.py  d8_pydantic_debug.py  d9_json_mode_debug.py
coding/projects/01-model-gateway/src/model_gateway/: __init__.py  bench.py  cli.py  config.py  gateway.py  metrics.py  ratelimit.py  retry.py  schemas.py  structured_output.py
coding/projects/01-model-gateway/src/model_gateway/adapters/: __init__.py  base.py  deepseek.py  mock.py  moonshot.py  openai_compat.py  openai_provider.py
coding/projects/01-model-gateway/src/model_gateway/tools/: __init__.py  calculator.py  registry.py
coding/projects/01-model-gateway/tests/: test_bench.py  test_calculator.py  test_chat_with_tools.py  test_gateway_smoke.py  test_metrics.py  test_mock_adapter.py  test_moonshot_routing.py  test_ratelimit.py  test_retry.py  test_schemas.py  test_tool_registry.py
coding/shared/: requirements-base.txt
logs/: week-01-复盘.md
notes/: README.md  rag-from-scratch
notes/adr/: 001-retry-policy.md
plan/: 18周总路线图.md  README.md  练习项目路线图.md
(+55 files in other folders)
